fix(loader): fix content bouncing and shifting when page rerenders after localization is loaded

--- a/src/assets/scss/base/base.scss
+++ b/src/assets/scss/base/base.scss
@@ -28,6 +28,11 @@ button {
   flex-direction: column;
   min-height: 100vh;
   min-height: 100svh;
+
+  &_loader {
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 .main {
